@@ -27,8 +27,9 @@
   POSSIBILITY OF SUCH DAMAGE.
 
  */
- 
- 
+
+/* $Id$ */
+
  /** \ingroup avr_string
      \fn char *strsep(char **string, const char *delim)
      \brief Parse a string into tokens.
@@ -48,10 +49,8 @@
      
 #if !defined(__DOXYGEN__)
 
-#include "gasava.inc"
 #include "macros.inc"
-#define X_hi		r27
-#define X_lo		r26
+
 #define p_str_hi	r25
 #define p_str_lo	r24
 #define del_hi		r23
@@ -63,50 +62,47 @@
 
 	.text
 	.global _U(strsep)
-	.type	 _U(strsep),@function
+	.type	_U(strsep),@function
 
 _U(strsep):				; Check on NULL pointers
-	LOAD_X	(p_str_lo, p_str_hi)
+	X_movw	XL, p_str_lo
 	LD	str_lo, X+
 	LD	str_hi, X		; str = *p_str
 	CP	str_lo, __zero_reg__
 	CPC	str_hi, __zero_reg__	; str == NULL ?
-	BRNE	.str_scan_init
+	BRNE	.L_str_scan_init
 	CLR	p_str_lo
 	CLR	p_str_hi
 	RET				; return(NULL)
 
-.str_scan_init:				; scan string
-	LOAD_X	(str_lo, str_hi)	; X = str
-	PUSH	X_lo
-	PUSH	X_hi			; save pointer to token
+.L_str_scan_init:			; scan string
+	X_movw	XL, str_lo		; X = str
 
-.scan_str_loop:				; next str char, 1st del char
+.L_scan_str_loop:			; next str char, 1st del char
 	LD	str_c, X+		; str_c = *str++
-	LOAD_Z	(del_lo, del_hi)	; Z = del
+	X_movw	ZL, del_lo		; Z = del
 
-.scan_del_loop:
+.L_scan_del_loop:
 	LD	del_c, Z+		; del_c = *Z
 	CP	del_c, str_c		; if (del_c == str_c)
 	BRNE	3f
 	TST	str_c			; end of str ?
 	BRNE	1f
-	CLR	X_lo
-	CLR	X_hi			; str = NULL
+	CLR	XL
+	CLR	XH			; str = NULL
 	RJMP	2f
 1:	ST	-X, __zero_reg__	; str[-1] = \0
-	ADIW	X_lo, 1			; undo auto decrement
-2:	LOAD_Z	(p_str_lo, p_str_hi)
-	ST	Z+, X_lo
-	ST	Z, X_hi			; *string = str
-	POP	p_str_hi
-	POP	p_str_lo
+	ADIW	XL, 1			; undo auto decrement
+2:	X_movw	ZL, p_str_lo
+	ST	Z+, XL
+	ST	Z, XH			; *string = str
+	X_movw	p_str_lo, str_lo 
 	RET				; return(token)
 3:	TST	del_c			; end of del string ?
-	BRNE	.scan_del_loop		; next del char, same str_char
-	RJMP	.scan_str_loop		; next str char, 1st del char
+	BRNE	.L_scan_del_loop	; next del char, same str_char
+	RJMP	.L_scan_str_loop	; next str char, 1st del char
 
-.strsep_end:
-	.size	_U(strsep), .strsep_end - _U(strsep)
+.L_strsep_end:
+	.size	_U(strsep), .L_strsep_end - _U(strsep)
 
 #endif /* not __DOXYGEN__ */
